correct missing language strings

--- a/templates/reportgenerator.mustache
+++ b/templates/reportgenerator.mustache
@@ -27,8 +27,8 @@
     <br>
     <div class="form-row mb-2">
         <button id='input_feedbackchoicegenerator' class='btn btn-primary' type='submit'>{{buttonlabel}}</button>
-        <a class='btn btn-warning' href='{{dataurl}}' type='application/xml'>Download (rechte Maustaste speichern unter)</a>
-        <a class='btn btn-danger' href='index.php?id={{courseid}}'>Session zurücksetzen</a>
+        <a class='btn btn-warning' href='{{dataurl}}' type='application/xml'>{{downloadbuttonlabel}}</a>
+        <a class='btn btn-danger' href='index.php?id={{courseid}}'>{{resetbuttonlabel}}</a>
     </div> 
 
 </form>
