fixed pluginname and refactored to feedbackrankedchoicegenerator, fixed: wrong url link back to course

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-#feedbackchoicegenerator {
+#feedbackrankedchoicegenerator {
     background-color: rgb(223, 242, 247);
     padding: 10px;
 }
 
-#feedbackchoicegenerator h3 {
+#feedbackrankedchoicegenerator h3 {
     padding: 10px;
     background-color: rgb(35, 65, 163);
     color: #fff;
 }
 
-#feedbackchoicegenerator .row {
+#feedbackrankedchoicegenerator .row {
     margin-left: 0;
 }
