--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-#feedbackrankedchoicegenerator {
+#feedbackchoicegenerator {
     background-color: rgb(223, 242, 247);
     padding: 10px;
 }
 
-#feedbackrankedchoicegenerator h3 {
+#feedbackchoicegenerator h3 {
     padding: 10px;
     background-color: rgb(35, 65, 163);
     color: #fff;
 }
 
-#feedbackrankedchoicegenerator .row {
+#feedbackchoicegenerator .row {
     margin-left: 0;
 }
